Name:           hopt
Version:        0.0
License:        BSD3
Cabal-Version:  >= 1.9.2
Build-Type:     Simple

executable hopt
  main-is:        HoptMain.hs
  other-modules:  Hopt
                , HoptArgParser
                , HOptArgData
                , LlvmData
                , LlvmParser
                , LlvmPrinter
                , Transforms.ConstProp
                , Transforms.CopyProp
                , Transforms.DeadInstructionElimination
  GHC-Options:    -Wall
  build-depends:  base
                , bytestring
                , iterIO
                , mtl
                , lens >= 3.6
                , cpphs
                , attoparsec
                , parsec

Test-Suite Test
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  GHC-Options:    -Wall -fno-ignore-asserts
  build-depends:  base
                , process
                , directory

